######### Extensible Embedded Platform example design change log ##############
2021.1 changes 
Updated with CIPS 3.0